@@ -40,7 +40,7 @@ namespace ShowcaseApp.WPF.Pages
             ggLogic.DefaultEdgeRoutingAlgorithm = EdgeRoutingAlgorithmTypeEnum.SimpleER;
             ggLogic.EdgeCurvingEnabled = true;
             
-
+            gg_Area.ShowAllEdgesArrows(true);
 
             ZoomControl.SetViewFinderVisibility(gg_zoomctrl, Visibility.Visible);
 
