@@ -62,12 +62,17 @@
                             x:Name="PART_edgePath"/>
                         <Path Stroke="{TemplateBinding Foreground}"
                           StrokeThickness="2" MinWidth="1" MinHeight="1" 
-                            x:Name="PART_edgeArrowPath"/>                      
+                            x:Name="PART_edgeArrowPath"
+                              >
+                        </Path>
+
+                        <!--<gxl:EdgePointerImage NeedRotation="False" x:Name="PART_EdgePointerImageForSource" Source="/Assets/circle_green.png" Width="15" Height="15" />
+                        <gxl:EdgePointerImage NeedRotation="False" x:Name="PART_EdgePointerImageForTarget" Source="/Assets/circle_red.png" Width="15" Height="15" />-->
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        
+
         <Setter Property="MinWidth"
                 Value="1" />
         <Setter Property="MinHeight"
